# keymasterMCP

./: .env.example  .gitignore  AGENTS.md  BOOTSTRAP.md  CONTEXT.md  DESIGN.md  Dockerfile  HERMES.md  README.md  SPEC.md  USAGE.md  docker-compose.yml  pyproject.toml  test-env.env
.antigravity/memories/: patterns_and_lessons.md
.antigravity/memories/architectural_decisions/: 0001-audit-logging.md
.antigravity/memories/codebase_insights/: backend_architecture.md
docs/adr/: 0001-mcp-first-ingestion.md
keymaster_mcp/: auth.py  cli.py  config.py  database.py  main.py  mcp_server.py  models.py  proxy.py  vault.py
php/: composer.json
php/public/: index.php
php/src/Controllers/: AccessControlController.php  AuthController.php  CredentialsController.php  DashboardController.php  ProjectsController.php  SettingsController.php
php/src/Services/: ApiService.php
scratch/: populate_aura.py
tests/: test_auth.py
